// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`avoids transpiling known precompiled packages given {}: input 1`] = `
export default class React {
  method(value) {
    return value ?? 2
  }
}

`;

exports[`avoids transpiling known precompiled packages given {}: output (cjs) 1`] = `export default class React{method(value){return value??2;}}`;

exports[`avoids transpiling known precompiled packages given {}: output (development) 1`] = `export default class React{method(value){return value??2;}}`;

exports[`avoids transpiling known precompiled packages given {}: output (esm) 1`] = `export default class React{method(value){return value??2;}}`;

exports[`avoids transpiling known precompiled packages given {}: output (production) 1`] = `export default class React{method(value){return value??2;}}`;

exports[`replaces generic polyfill with env-targeted polyfills given {}: input 1`] = `
import 'core-js/stable'

`;

exports[`replaces generic polyfill with env-targeted polyfills given {}: output (cjs) 1`] = `
"use strict";

require("core-js/modules/es.math.hypot");
`;

exports[`replaces generic polyfill with env-targeted polyfills given {}: output (development) 1`] = `
import "core-js/modules/es.symbol";
import "core-js/modules/es.symbol.description";
import "core-js/modules/es.symbol.async-iterator";
import "core-js/modules/es.symbol.has-instance";
import "core-js/modules/es.symbol.is-concat-spreadable";
import "core-js/modules/es.symbol.iterator";
import "core-js/modules/es.symbol.match";
import "core-js/modules/es.symbol.replace";
import "core-js/modules/es.symbol.search";
import "core-js/modules/es.symbol.species";
import "core-js/modules/es.symbol.split";
import "core-js/modules/es.symbol.to-primitive";
import "core-js/modules/es.symbol.to-string-tag";
import "core-js/modules/es.symbol.unscopables";
import "core-js/modules/es.array.concat";
import "core-js/modules/es.array.copy-within";
import "core-js/modules/es.array.every";
import "core-js/modules/es.array.fill";
import "core-js/modules/es.array.filter";
import "core-js/modules/es.array.find";
import "core-js/modules/es.array.find-index";
import "core-js/modules/es.array.flat";
import "core-js/modules/es.array.flat-map";
import "core-js/modules/es.array.for-each";
import "core-js/modules/es.array.from";
import "core-js/modules/es.array.includes";
import "core-js/modules/es.array.index-of";
import "core-js/modules/es.array.is-array";
import "core-js/modules/es.array.iterator";
import "core-js/modules/es.array.join";
import "core-js/modules/es.array.last-index-of";
import "core-js/modules/es.array.map";
import "core-js/modules/es.array.of";
import "core-js/modules/es.array.reduce";
import "core-js/modules/es.array.reduce-right";
import "core-js/modules/es.array.reverse";
import "core-js/modules/es.array.slice";
import "core-js/modules/es.array.some";
import "core-js/modules/es.array.sort";
import "core-js/modules/es.array.species";
import "core-js/modules/es.array.splice";
import "core-js/modules/es.array.unscopables.flat";
import "core-js/modules/es.array.unscopables.flat-map";
import "core-js/modules/es.array-buffer.constructor";
import "core-js/modules/es.array-buffer.is-view";
import "core-js/modules/es.array-buffer.slice";
import "core-js/modules/es.data-view";
import "core-js/modules/es.date.now";
import "core-js/modules/es.date.to-iso-string";
import "core-js/modules/es.date.to-json";
import "core-js/modules/es.date.to-primitive";
import "core-js/modules/es.date.to-string";
import "core-js/modules/es.function.bind";
import "core-js/modules/es.function.has-instance";
import "core-js/modules/es.function.name";
import "core-js/modules/es.json.to-string-tag";
import "core-js/modules/es.map";
import "core-js/modules/es.math.acosh";
import "core-js/modules/es.math.asinh";
import "core-js/modules/es.math.atanh";
import "core-js/modules/es.math.cbrt";
import "core-js/modules/es.math.clz32";
import "core-js/modules/es.math.cosh";
import "core-js/modules/es.math.expm1";
import "core-js/modules/es.math.fround";
import "core-js/modules/es.math.hypot";
import "core-js/modules/es.math.imul";
import "core-js/modules/es.math.log10";
import "core-js/modules/es.math.log1p";
import "core-js/modules/es.math.log2";
import "core-js/modules/es.math.sign";
import "core-js/modules/es.math.sinh";
import "core-js/modules/es.math.tanh";
import "core-js/modules/es.math.to-string-tag";
import "core-js/modules/es.math.trunc";
import "core-js/modules/es.number.constructor";
import "core-js/modules/es.number.epsilon";
import "core-js/modules/es.number.is-finite";
import "core-js/modules/es.number.is-integer";
import "core-js/modules/es.number.is-nan";
import "core-js/modules/es.number.is-safe-integer";
import "core-js/modules/es.number.max-safe-integer";
import "core-js/modules/es.number.min-safe-integer";
import "core-js/modules/es.number.parse-float";
import "core-js/modules/es.number.parse-int";
import "core-js/modules/es.number.to-fixed";
import "core-js/modules/es.number.to-precision";
import "core-js/modules/es.object.assign";
import "core-js/modules/es.object.create";
import "core-js/modules/es.object.define-getter";
import "core-js/modules/es.object.define-properties";
import "core-js/modules/es.object.define-property";
import "core-js/modules/es.object.define-setter";
import "core-js/modules/es.object.entries";
import "core-js/modules/es.object.freeze";
import "core-js/modules/es.object.from-entries";
import "core-js/modules/es.object.get-own-property-descriptor";
import "core-js/modules/es.object.get-own-property-descriptors";
import "core-js/modules/es.object.get-own-property-names";
import "core-js/modules/es.object.get-prototype-of";
import "core-js/modules/es.object.is";
import "core-js/modules/es.object.is-extensible";
import "core-js/modules/es.object.is-frozen";
import "core-js/modules/es.object.is-sealed";
import "core-js/modules/es.object.keys";
import "core-js/modules/es.object.lookup-getter";
import "core-js/modules/es.object.lookup-setter";
import "core-js/modules/es.object.prevent-extensions";
import "core-js/modules/es.object.seal";
import "core-js/modules/es.object.set-prototype-of";
import "core-js/modules/es.object.to-string";
import "core-js/modules/es.object.values";
import "core-js/modules/es.parse-float";
import "core-js/modules/es.parse-int";
import "core-js/modules/es.promise";
import "core-js/modules/es.promise.finally";
import "core-js/modules/es.reflect.apply";
import "core-js/modules/es.reflect.construct";
import "core-js/modules/es.reflect.define-property";
import "core-js/modules/es.reflect.delete-property";
import "core-js/modules/es.reflect.get";
import "core-js/modules/es.reflect.get-own-property-descriptor";
import "core-js/modules/es.reflect.get-prototype-of";
import "core-js/modules/es.reflect.has";
import "core-js/modules/es.reflect.is-extensible";
import "core-js/modules/es.reflect.own-keys";
import "core-js/modules/es.reflect.prevent-extensions";
import "core-js/modules/es.reflect.set";
import "core-js/modules/es.reflect.set-prototype-of";
import "core-js/modules/es.regexp.constructor";
import "core-js/modules/es.regexp.exec";
import "core-js/modules/es.regexp.flags";
import "core-js/modules/es.regexp.to-string";
import "core-js/modules/es.set";
import "core-js/modules/es.string.code-point-at";
import "core-js/modules/es.string.ends-with";
import "core-js/modules/es.string.from-code-point";
import "core-js/modules/es.string.includes";
import "core-js/modules/es.string.iterator";
import "core-js/modules/es.string.match";
import "core-js/modules/es.string.pad-end";
import "core-js/modules/es.string.pad-start";
import "core-js/modules/es.string.raw";
import "core-js/modules/es.string.repeat";
import "core-js/modules/es.string.replace";
import "core-js/modules/es.string.search";
import "core-js/modules/es.string.split";
import "core-js/modules/es.string.starts-with";
import "core-js/modules/es.string.trim";
import "core-js/modules/es.string.trim-end";
import "core-js/modules/es.string.trim-start";
import "core-js/modules/es.string.anchor";
import "core-js/modules/es.string.big";
import "core-js/modules/es.string.blink";
import "core-js/modules/es.string.bold";
import "core-js/modules/es.string.fixed";
import "core-js/modules/es.string.fontcolor";
import "core-js/modules/es.string.fontsize";
import "core-js/modules/es.string.italics";
import "core-js/modules/es.string.link";
import "core-js/modules/es.string.small";
import "core-js/modules/es.string.strike";
import "core-js/modules/es.string.sub";
import "core-js/modules/es.string.sup";
import "core-js/modules/es.typed-array.float32-array";
import "core-js/modules/es.typed-array.float64-array";
import "core-js/modules/es.typed-array.int8-array";
import "core-js/modules/es.typed-array.int16-array";
import "core-js/modules/es.typed-array.int32-array";
import "core-js/modules/es.typed-array.uint8-array";
import "core-js/modules/es.typed-array.uint8-clamped-array";
import "core-js/modules/es.typed-array.uint16-array";
import "core-js/modules/es.typed-array.uint32-array";
import "core-js/modules/es.typed-array.copy-within";
import "core-js/modules/es.typed-array.every";
import "core-js/modules/es.typed-array.fill";
import "core-js/modules/es.typed-array.filter";
import "core-js/modules/es.typed-array.find";
import "core-js/modules/es.typed-array.find-index";
import "core-js/modules/es.typed-array.for-each";
import "core-js/modules/es.typed-array.from";
import "core-js/modules/es.typed-array.includes";
import "core-js/modules/es.typed-array.index-of";
import "core-js/modules/es.typed-array.iterator";
import "core-js/modules/es.typed-array.join";
import "core-js/modules/es.typed-array.last-index-of";
import "core-js/modules/es.typed-array.map";
import "core-js/modules/es.typed-array.of";
import "core-js/modules/es.typed-array.reduce";
import "core-js/modules/es.typed-array.reduce-right";
import "core-js/modules/es.typed-array.reverse";
import "core-js/modules/es.typed-array.set";
import "core-js/modules/es.typed-array.slice";
import "core-js/modules/es.typed-array.some";
import "core-js/modules/es.typed-array.sort";
import "core-js/modules/es.typed-array.subarray";
import "core-js/modules/es.typed-array.to-locale-string";
import "core-js/modules/es.typed-array.to-string";
import "core-js/modules/es.weak-map";
import "core-js/modules/es.weak-set";
import "core-js/modules/web.dom-collections.for-each";
import "core-js/modules/web.dom-collections.iterator";
import "core-js/modules/web.immediate";
import "core-js/modules/web.queue-microtask";
import "core-js/modules/web.timers";
import "core-js/modules/web.url";
import "core-js/modules/web.url.to-json";
import "core-js/modules/web.url-search-params";
`;

exports[`replaces generic polyfill with env-targeted polyfills given {}: output (esm) 1`] = `import "core-js/modules/es.math.hypot";`;

exports[`replaces generic polyfill with env-targeted polyfills given {}: output (production) 1`] = `
import "core-js/modules/es.symbol";
import "core-js/modules/es.symbol.description";
import "core-js/modules/es.symbol.async-iterator";
import "core-js/modules/es.symbol.has-instance";
import "core-js/modules/es.symbol.is-concat-spreadable";
import "core-js/modules/es.symbol.iterator";
import "core-js/modules/es.symbol.match";
import "core-js/modules/es.symbol.replace";
import "core-js/modules/es.symbol.search";
import "core-js/modules/es.symbol.species";
import "core-js/modules/es.symbol.split";
import "core-js/modules/es.symbol.to-primitive";
import "core-js/modules/es.symbol.to-string-tag";
import "core-js/modules/es.symbol.unscopables";
import "core-js/modules/es.array.concat";
import "core-js/modules/es.array.copy-within";
import "core-js/modules/es.array.every";
import "core-js/modules/es.array.fill";
import "core-js/modules/es.array.filter";
import "core-js/modules/es.array.find";
import "core-js/modules/es.array.find-index";
import "core-js/modules/es.array.flat";
import "core-js/modules/es.array.flat-map";
import "core-js/modules/es.array.for-each";
import "core-js/modules/es.array.from";
import "core-js/modules/es.array.includes";
import "core-js/modules/es.array.index-of";
import "core-js/modules/es.array.is-array";
import "core-js/modules/es.array.iterator";
import "core-js/modules/es.array.join";
import "core-js/modules/es.array.last-index-of";
import "core-js/modules/es.array.map";
import "core-js/modules/es.array.of";
import "core-js/modules/es.array.reduce";
import "core-js/modules/es.array.reduce-right";
import "core-js/modules/es.array.reverse";
import "core-js/modules/es.array.slice";
import "core-js/modules/es.array.some";
import "core-js/modules/es.array.sort";
import "core-js/modules/es.array.species";
import "core-js/modules/es.array.splice";
import "core-js/modules/es.array.unscopables.flat";
import "core-js/modules/es.array.unscopables.flat-map";
import "core-js/modules/es.array-buffer.constructor";
import "core-js/modules/es.array-buffer.is-view";
import "core-js/modules/es.array-buffer.slice";
import "core-js/modules/es.data-view";
import "core-js/modules/es.date.now";
import "core-js/modules/es.date.to-iso-string";
import "core-js/modules/es.date.to-json";
import "core-js/modules/es.date.to-primitive";
import "core-js/modules/es.date.to-string";
import "core-js/modules/es.function.bind";
import "core-js/modules/es.function.has-instance";
import "core-js/modules/es.function.name";
import "core-js/modules/es.json.to-string-tag";
import "core-js/modules/es.map";
import "core-js/modules/es.math.acosh";
import "core-js/modules/es.math.asinh";
import "core-js/modules/es.math.atanh";
import "core-js/modules/es.math.cbrt";
import "core-js/modules/es.math.clz32";
import "core-js/modules/es.math.cosh";
import "core-js/modules/es.math.expm1";
import "core-js/modules/es.math.fround";
import "core-js/modules/es.math.hypot";
import "core-js/modules/es.math.imul";
import "core-js/modules/es.math.log10";
import "core-js/modules/es.math.log1p";
import "core-js/modules/es.math.log2";
import "core-js/modules/es.math.sign";
import "core-js/modules/es.math.sinh";
import "core-js/modules/es.math.tanh";
import "core-js/modules/es.math.to-string-tag";
import "core-js/modules/es.math.trunc";
import "core-js/modules/es.number.constructor";
import "core-js/modules/es.number.epsilon";
import "core-js/modules/es.number.is-finite";
import "core-js/modules/es.number.is-integer";
import "core-js/modules/es.number.is-nan";
import "core-js/modules/es.number.is-safe-integer";
import "core-js/modules/es.number.max-safe-integer";
import "core-js/modules/es.number.min-safe-integer";
import "core-js/modules/es.number.parse-float";
import "core-js/modules/es.number.parse-int";
import "core-js/modules/es.number.to-fixed";
import "core-js/modules/es.number.to-precision";
import "core-js/modules/es.object.assign";
import "core-js/modules/es.object.create";
import "core-js/modules/es.object.define-getter";
import "core-js/modules/es.object.define-properties";
import "core-js/modules/es.object.define-property";
import "core-js/modules/es.object.define-setter";
import "core-js/modules/es.object.entries";
import "core-js/modules/es.object.freeze";
import "core-js/modules/es.object.from-entries";
import "core-js/modules/es.object.get-own-property-descriptor";
import "core-js/modules/es.object.get-own-property-descriptors";
import "core-js/modules/es.object.get-own-property-names";
import "core-js/modules/es.object.get-prototype-of";
import "core-js/modules/es.object.is";
import "core-js/modules/es.object.is-extensible";
import "core-js/modules/es.object.is-frozen";
import "core-js/modules/es.object.is-sealed";
import "core-js/modules/es.object.keys";
import "core-js/modules/es.object.lookup-getter";
import "core-js/modules/es.object.lookup-setter";
import "core-js/modules/es.object.prevent-extensions";
import "core-js/modules/es.object.seal";
import "core-js/modules/es.object.set-prototype-of";
import "core-js/modules/es.object.to-string";
import "core-js/modules/es.object.values";
import "core-js/modules/es.parse-float";
import "core-js/modules/es.parse-int";
import "core-js/modules/es.promise";
import "core-js/modules/es.promise.finally";
import "core-js/modules/es.reflect.apply";
import "core-js/modules/es.reflect.construct";
import "core-js/modules/es.reflect.define-property";
import "core-js/modules/es.reflect.delete-property";
import "core-js/modules/es.reflect.get";
import "core-js/modules/es.reflect.get-own-property-descriptor";
import "core-js/modules/es.reflect.get-prototype-of";
import "core-js/modules/es.reflect.has";
import "core-js/modules/es.reflect.is-extensible";
import "core-js/modules/es.reflect.own-keys";
import "core-js/modules/es.reflect.prevent-extensions";
import "core-js/modules/es.reflect.set";
import "core-js/modules/es.reflect.set-prototype-of";
import "core-js/modules/es.regexp.constructor";
import "core-js/modules/es.regexp.exec";
import "core-js/modules/es.regexp.flags";
import "core-js/modules/es.regexp.to-string";
import "core-js/modules/es.set";
import "core-js/modules/es.string.code-point-at";
import "core-js/modules/es.string.ends-with";
import "core-js/modules/es.string.from-code-point";
import "core-js/modules/es.string.includes";
import "core-js/modules/es.string.iterator";
import "core-js/modules/es.string.match";
import "core-js/modules/es.string.pad-end";
import "core-js/modules/es.string.pad-start";
import "core-js/modules/es.string.raw";
import "core-js/modules/es.string.repeat";
import "core-js/modules/es.string.replace";
import "core-js/modules/es.string.search";
import "core-js/modules/es.string.split";
import "core-js/modules/es.string.starts-with";
import "core-js/modules/es.string.trim";
import "core-js/modules/es.string.trim-end";
import "core-js/modules/es.string.trim-start";
import "core-js/modules/es.string.anchor";
import "core-js/modules/es.string.big";
import "core-js/modules/es.string.blink";
import "core-js/modules/es.string.bold";
import "core-js/modules/es.string.fixed";
import "core-js/modules/es.string.fontcolor";
import "core-js/modules/es.string.fontsize";
import "core-js/modules/es.string.italics";
import "core-js/modules/es.string.link";
import "core-js/modules/es.string.small";
import "core-js/modules/es.string.strike";
import "core-js/modules/es.string.sub";
import "core-js/modules/es.string.sup";
import "core-js/modules/es.typed-array.float32-array";
import "core-js/modules/es.typed-array.float64-array";
import "core-js/modules/es.typed-array.int8-array";
import "core-js/modules/es.typed-array.int16-array";
import "core-js/modules/es.typed-array.int32-array";
import "core-js/modules/es.typed-array.uint8-array";
import "core-js/modules/es.typed-array.uint8-clamped-array";
import "core-js/modules/es.typed-array.uint16-array";
import "core-js/modules/es.typed-array.uint32-array";
import "core-js/modules/es.typed-array.copy-within";
import "core-js/modules/es.typed-array.every";
import "core-js/modules/es.typed-array.fill";
import "core-js/modules/es.typed-array.filter";
import "core-js/modules/es.typed-array.find";
import "core-js/modules/es.typed-array.find-index";
import "core-js/modules/es.typed-array.for-each";
import "core-js/modules/es.typed-array.from";
import "core-js/modules/es.typed-array.includes";
import "core-js/modules/es.typed-array.index-of";
import "core-js/modules/es.typed-array.iterator";
import "core-js/modules/es.typed-array.join";
import "core-js/modules/es.typed-array.last-index-of";
import "core-js/modules/es.typed-array.map";
import "core-js/modules/es.typed-array.of";
import "core-js/modules/es.typed-array.reduce";
import "core-js/modules/es.typed-array.reduce-right";
import "core-js/modules/es.typed-array.reverse";
import "core-js/modules/es.typed-array.set";
import "core-js/modules/es.typed-array.slice";
import "core-js/modules/es.typed-array.some";
import "core-js/modules/es.typed-array.sort";
import "core-js/modules/es.typed-array.subarray";
import "core-js/modules/es.typed-array.to-locale-string";
import "core-js/modules/es.typed-array.to-string";
import "core-js/modules/es.weak-map";
import "core-js/modules/es.weak-set";
import "core-js/modules/web.dom-collections.for-each";
import "core-js/modules/web.dom-collections.iterator";
import "core-js/modules/web.immediate";
import "core-js/modules/web.queue-microtask";
import "core-js/modules/web.timers";
import "core-js/modules/web.url";
import "core-js/modules/web.url.to-json";
import "core-js/modules/web.url-search-params";
`;

exports[`transpiles CJS in node_modules given {}: input 1`] = `
module.exports = function forEach(array, sideEffect) {
  for (const value of array) sideEffect(value)
}

`;

exports[`transpiles CJS in node_modules given {}: output (cjs) 1`] = `module.exports=function forEach(array,sideEffect){for(const value of array)sideEffect(value);};`;

exports[`transpiles CJS in node_modules given {}: output (development) 1`] = `var _createForOfIteratorHelperLoose=require("@babel/runtime/helpers/createForOfIteratorHelperLoose");module.exports=function forEach(array,sideEffect){for(var _iterator=_createForOfIteratorHelperLoose(array),_step;!(_step=_iterator()).done;){var value=_step.value;sideEffect(value);}};`;

exports[`transpiles CJS in node_modules given {}: output (esm) 1`] = `module.exports=function forEach(array,sideEffect){for(const value of array)sideEffect(value);};`;

exports[`transpiles CJS in node_modules given {}: output (production) 1`] = `var _createForOfIteratorHelperLoose=require("@babel/runtime/helpers/createForOfIteratorHelperLoose");module.exports=function forEach(array,sideEffect){for(var _iterator=_createForOfIteratorHelperLoose(array),_step;!(_step=_iterator()).done;){var value=_step.value;sideEffect(value);}};`;

exports[`transpiles ES2020+ syntax given {"loose":false}: input 1`] = `
import defaultImport, {namedImport} from 'foo'
import * as namespaceImport from 'bar'

const dynamicImport = import('baz')

class Foo {
  static bar = 'abc'
  baz = (x, y) => x({...y})
}

const obj = {a: 1, b: 2}

const spread = {...obj, b: 2, c: 3}
const {a, ...rest} = spread

const nullishCoalescing = obj ?? 1
const optionalChaining = obj?.b

export default obj
export {obj}

`;

exports[`transpiles ES2020+ syntax given {"loose":false}: output (cjs) 1`] = `
"use strict";

var _interopRequireWildcard3 = require("@babel/runtime/helpers/interopRequireWildcard");

var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");

Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.obj = exports.default = void 0;

var _defineProperty2 = _interopRequireDefault(require("@babel/runtime/helpers/defineProperty"));

var _interopRequireWildcard2 = _interopRequireDefault(require("@babel/runtime/helpers/interopRequireWildcard"));

var _foo = _interopRequireWildcard3(require("foo"));

var namespaceImport = _interopRequireWildcard3(require("bar"));

const dynamicImport = Promise.resolve().then(() => (0, _interopRequireWildcard2.default)(require('baz')));

class Foo {
  constructor() {
    (0, _defineProperty2.default)(this, "baz", (x, y) => x({ ...y
    }));
  }

}

(0, _defineProperty2.default)(Foo, "bar", 'abc');
const obj = {
  a: 1,
  b: 2
};
exports.obj = obj;
const spread = { ...obj,
  b: 2,
  c: 3
};
const {
  a,
  ...rest
} = spread;
const nullishCoalescing = obj !== null && obj !== void 0 ? obj : 1;
const optionalChaining = obj === null || obj === void 0 ? void 0 : obj.b;
var _default = obj;
exports.default = _default;
`;

exports[`transpiles ES2020+ syntax given {"loose":false}: output (development) 1`] = `
import _objectWithoutProperties from "@babel/runtime/helpers/esm/objectWithoutProperties";
import _objectSpread from "@babel/runtime/helpers/esm/objectSpread2";
import _classCallCheck from "@babel/runtime/helpers/esm/classCallCheck";
import _defineProperty from "@babel/runtime/helpers/esm/defineProperty";
import defaultImport, { namedImport } from 'foo';
import * as namespaceImport from 'bar';
var dynamicImport = import('baz');

var Foo = function Foo() {
  _classCallCheck(this, Foo);

  _defineProperty(this, "baz", function (x, y) {
    return x(_objectSpread({}, y));
  });
};

_defineProperty(Foo, "bar", 'abc');

var obj = {
  a: 1,
  b: 2
};

var spread = _objectSpread(_objectSpread({}, obj), {}, {
  b: 2,
  c: 3
});

var a = spread.a,
    rest = _objectWithoutProperties(spread, ["a"]);

var nullishCoalescing = obj !== null && obj !== void 0 ? obj : 1;
var optionalChaining = obj === null || obj === void 0 ? void 0 : obj.b;
export default obj;
export { obj };
`;

exports[`transpiles ES2020+ syntax given {"loose":false}: output (esm) 1`] = `
import _defineProperty from "@babel/runtime/helpers/esm/defineProperty";
import defaultImport, { namedImport } from 'foo';
import * as namespaceImport from 'bar';
const dynamicImport = import('baz');

class Foo {
  constructor() {
    _defineProperty(this, "baz", (x, y) => x({ ...y
    }));
  }

}

_defineProperty(Foo, "bar", 'abc');

const obj = {
  a: 1,
  b: 2
};
const spread = { ...obj,
  b: 2,
  c: 3
};
const {
  a,
  ...rest
} = spread;
const nullishCoalescing = obj !== null && obj !== void 0 ? obj : 1;
const optionalChaining = obj === null || obj === void 0 ? void 0 : obj.b;
export default obj;
export { obj };
`;

exports[`transpiles ES2020+ syntax given {"loose":false}: output (production) 1`] = `
import _objectWithoutProperties from "@babel/runtime/helpers/esm/objectWithoutProperties";
import _objectSpread from "@babel/runtime/helpers/esm/objectSpread2";
import _classCallCheck from "@babel/runtime/helpers/esm/classCallCheck";
import _defineProperty from "@babel/runtime/helpers/esm/defineProperty";
import defaultImport, { namedImport } from 'foo';
import * as namespaceImport from 'bar';
var dynamicImport = import('baz');

var Foo = function Foo() {
  _classCallCheck(this, Foo);

  _defineProperty(this, "baz", function (x, y) {
    return x(_objectSpread({}, y));
  });
};

_defineProperty(Foo, "bar", 'abc');

var obj = {
  a: 1,
  b: 2
};

var spread = _objectSpread(_objectSpread({}, obj), {}, {
  b: 2,
  c: 3
});

var a = spread.a,
    rest = _objectWithoutProperties(spread, ["a"]);

var nullishCoalescing = obj !== null && obj !== void 0 ? obj : 1;
var optionalChaining = obj === null || obj === void 0 ? void 0 : obj.b;
export default obj;
export { obj };
`;

exports[`transpiles ES2020+ syntax given {"modules":"commonjs"}: input 1`] = `
import defaultImport, {namedImport} from 'foo'
import * as namespaceImport from 'bar'

const dynamicImport = import('baz')

class Foo {
  static bar = 'abc'
  baz = (x, y) => x({...y})
}

const obj = {a: 1, b: 2}

const spread = {...obj, b: 2, c: 3}
const {a, ...rest} = spread

const nullishCoalescing = obj ?? 1
const optionalChaining = obj?.b

export default obj
export {obj}

`;

exports[`transpiles ES2020+ syntax given {"modules":"commonjs"}: output (cjs) 1`] = `
"use strict";

var _interopRequireWildcard3 = require("@babel/runtime/helpers/interopRequireWildcard");

var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");

exports.__esModule = true;
exports.obj = exports.default = void 0;

var _interopRequireWildcard2 = _interopRequireDefault(require("@babel/runtime/helpers/interopRequireWildcard"));

var _foo = _interopRequireWildcard3(require("foo"));

var namespaceImport = _interopRequireWildcard3(require("bar"));

const dynamicImport = Promise.resolve().then(() => (0, _interopRequireWildcard2.default)(require('baz')));

class Foo {
  constructor() {
    this.baz = (x, y) => x({ ...y
    });
  }

}

Foo.bar = 'abc';
const obj = {
  a: 1,
  b: 2
};
exports.obj = obj;
const spread = { ...obj,
  b: 2,
  c: 3
};
const {
  a,
  ...rest
} = spread;
const nullishCoalescing = obj != null ? obj : 1;
const optionalChaining = obj == null ? void 0 : obj.b;
var _default = obj;
exports.default = _default;
`;

exports[`transpiles ES2020+ syntax given {"modules":"commonjs"}: output (development) 1`] = `
"use strict";

var _interopRequireWildcard3 = require("@babel/runtime/helpers/interopRequireWildcard");

var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");

exports.__esModule = true;
exports.obj = exports["default"] = void 0;

var _objectWithoutPropertiesLoose2 = _interopRequireDefault(require("@babel/runtime/helpers/objectWithoutPropertiesLoose"));

var _interopRequireWildcard2 = _interopRequireDefault(require("@babel/runtime/helpers/interopRequireWildcard"));

var _foo = _interopRequireWildcard3(require("foo"));

var namespaceImport = _interopRequireWildcard3(require("bar"));

var dynamicImport = Promise.resolve().then(function () {
  return (0, _interopRequireWildcard2["default"])(require('baz'));
});

var Foo = function Foo() {
  this.baz = function (x, y) {
    return x(Object.assign({}, y));
  };
};

Foo.bar = 'abc';
var obj = {
  a: 1,
  b: 2
};
exports.obj = obj;
var spread = Object.assign({}, obj, {
  b: 2,
  c: 3
});
var a = spread.a,
    rest = (0, _objectWithoutPropertiesLoose2["default"])(spread, ["a"]);
var nullishCoalescing = obj != null ? obj : 1;
var optionalChaining = obj == null ? void 0 : obj.b;
var _default = obj;
exports["default"] = _default;
`;

exports[`transpiles ES2020+ syntax given {"modules":"commonjs"}: output (esm) 1`] = `
"use strict";

var _interopRequireWildcard3 = require("@babel/runtime/helpers/interopRequireWildcard");

var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");

exports.__esModule = true;
exports.obj = exports.default = void 0;

var _interopRequireWildcard2 = _interopRequireDefault(require("@babel/runtime/helpers/interopRequireWildcard"));

var _foo = _interopRequireWildcard3(require("foo"));

var namespaceImport = _interopRequireWildcard3(require("bar"));

const dynamicImport = Promise.resolve().then(() => (0, _interopRequireWildcard2.default)(require('baz')));

class Foo {
  constructor() {
    this.baz = (x, y) => x({ ...y
    });
  }

}

Foo.bar = 'abc';
const obj = {
  a: 1,
  b: 2
};
exports.obj = obj;
const spread = { ...obj,
  b: 2,
  c: 3
};
const {
  a,
  ...rest
} = spread;
const nullishCoalescing = obj != null ? obj : 1;
const optionalChaining = obj == null ? void 0 : obj.b;
var _default = obj;
exports.default = _default;
`;

exports[`transpiles ES2020+ syntax given {"modules":"commonjs"}: output (production) 1`] = `
"use strict";

var _interopRequireWildcard3 = require("@babel/runtime/helpers/interopRequireWildcard");

var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");

exports.__esModule = true;
exports.obj = exports["default"] = void 0;

var _objectWithoutPropertiesLoose2 = _interopRequireDefault(require("@babel/runtime/helpers/objectWithoutPropertiesLoose"));

var _interopRequireWildcard2 = _interopRequireDefault(require("@babel/runtime/helpers/interopRequireWildcard"));

var _foo = _interopRequireWildcard3(require("foo"));

var namespaceImport = _interopRequireWildcard3(require("bar"));

var dynamicImport = Promise.resolve().then(function () {
  return (0, _interopRequireWildcard2["default"])(require('baz'));
});

var Foo = function Foo() {
  this.baz = function (x, y) {
    return x(Object.assign({}, y));
  };
};

Foo.bar = 'abc';
var obj = {
  a: 1,
  b: 2
};
exports.obj = obj;
var spread = Object.assign({}, obj, {
  b: 2,
  c: 3
});
var a = spread.a,
    rest = (0, _objectWithoutPropertiesLoose2["default"])(spread, ["a"]);
var nullishCoalescing = obj != null ? obj : 1;
var optionalChaining = obj == null ? void 0 : obj.b;
var _default = obj;
exports["default"] = _default;
`;

exports[`transpiles ES2020+ syntax given {"runtime":false}: input 1`] = `
import defaultImport, {namedImport} from 'foo'
import * as namespaceImport from 'bar'

const dynamicImport = import('baz')

class Foo {
  static bar = 'abc'
  baz = (x, y) => x({...y})
}

const obj = {a: 1, b: 2}

const spread = {...obj, b: 2, c: 3}
const {a, ...rest} = spread

const nullishCoalescing = obj ?? 1
const optionalChaining = obj?.b

export default obj
export {obj}

`;

exports[`transpiles ES2020+ syntax given {"runtime":false}: output (cjs) 1`] = `
"use strict";

exports.__esModule = true;
exports.obj = exports.default = void 0;

var _foo = _interopRequireWildcard(require("foo"));

var namespaceImport = _interopRequireWildcard(require("bar"));

function _getRequireWildcardCache() { if (typeof WeakMap !== "function") return null; var cache = new WeakMap(); _getRequireWildcardCache = function () { return cache; }; return cache; }

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } if (obj === null || typeof obj !== "object" && typeof obj !== "function") { return { default: obj }; } var cache = _getRequireWildcardCache(); if (cache && cache.has(obj)) { return cache.get(obj); } var newObj = {}; var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor; for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null; if (desc && (desc.get || desc.set)) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } newObj.default = obj; if (cache) { cache.set(obj, newObj); } return newObj; }

const dynamicImport = Promise.resolve().then(() => _interopRequireWildcard(require('baz')));

class Foo {
  constructor() {
    this.baz = (x, y) => x({ ...y
    });
  }

}

Foo.bar = 'abc';
const obj = {
  a: 1,
  b: 2
};
exports.obj = obj;
const spread = { ...obj,
  b: 2,
  c: 3
};
const {
  a,
  ...rest
} = spread;
const nullishCoalescing = obj != null ? obj : 1;
const optionalChaining = obj == null ? void 0 : obj.b;
var _default = obj;
exports.default = _default;
`;

exports[`transpiles ES2020+ syntax given {"runtime":false}: output (development) 1`] = `
function _objectWithoutPropertiesLoose(source, excluded) { if (source == null) return {}; var target = {}; var sourceKeys = Object.keys(source); var key, i; for (i = 0; i < sourceKeys.length; i++) { key = sourceKeys[i]; if (excluded.indexOf(key) >= 0) continue; target[key] = source[key]; } return target; }

import defaultImport, { namedImport } from 'foo';
import * as namespaceImport from 'bar';
var dynamicImport = import('baz');

var Foo = function Foo() {
  this.baz = function (x, y) {
    return x(Object.assign({}, y));
  };
};

Foo.bar = 'abc';
var obj = {
  a: 1,
  b: 2
};
var spread = Object.assign({}, obj, {
  b: 2,
  c: 3
});

var a = spread.a,
    rest = _objectWithoutPropertiesLoose(spread, ["a"]);

var nullishCoalescing = obj != null ? obj : 1;
var optionalChaining = obj == null ? void 0 : obj.b;
export default obj;
export { obj };
`;

exports[`transpiles ES2020+ syntax given {"runtime":false}: output (esm) 1`] = `
import defaultImport, { namedImport } from 'foo';
import * as namespaceImport from 'bar';
const dynamicImport = import('baz');

class Foo {
  constructor() {
    this.baz = (x, y) => x({ ...y
    });
  }

}

Foo.bar = 'abc';
const obj = {
  a: 1,
  b: 2
};
const spread = { ...obj,
  b: 2,
  c: 3
};
const {
  a,
  ...rest
} = spread;
const nullishCoalescing = obj != null ? obj : 1;
const optionalChaining = obj == null ? void 0 : obj.b;
export default obj;
export { obj };
`;

exports[`transpiles ES2020+ syntax given {"runtime":false}: output (production) 1`] = `
function _objectWithoutPropertiesLoose(source, excluded) { if (source == null) return {}; var target = {}; var sourceKeys = Object.keys(source); var key, i; for (i = 0; i < sourceKeys.length; i++) { key = sourceKeys[i]; if (excluded.indexOf(key) >= 0) continue; target[key] = source[key]; } return target; }

import defaultImport, { namedImport } from 'foo';
import * as namespaceImport from 'bar';
var dynamicImport = import('baz');

var Foo = function Foo() {
  this.baz = function (x, y) {
    return x(Object.assign({}, y));
  };
};

Foo.bar = 'abc';
var obj = {
  a: 1,
  b: 2
};
var spread = Object.assign({}, obj, {
  b: 2,
  c: 3
});

var a = spread.a,
    rest = _objectWithoutPropertiesLoose(spread, ["a"]);

var nullishCoalescing = obj != null ? obj : 1;
var optionalChaining = obj == null ? void 0 : obj.b;
export default obj;
export { obj };
`;

exports[`transpiles ES2020+ syntax given {"targets":"last 2 Chrome versions"}: input 1`] = `
import defaultImport, {namedImport} from 'foo'
import * as namespaceImport from 'bar'

const dynamicImport = import('baz')

class Foo {
  static bar = 'abc'
  baz = (x, y) => x({...y})
}

const obj = {a: 1, b: 2}

const spread = {...obj, b: 2, c: 3}
const {a, ...rest} = spread

const nullishCoalescing = obj ?? 1
const optionalChaining = obj?.b

export default obj
export {obj}

`;

exports[`transpiles ES2020+ syntax given {"targets":"last 2 Chrome versions"}: output (cjs) 1`] = `
"use strict";

var _interopRequireWildcard3 = require("@babel/runtime/helpers/interopRequireWildcard");

var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");

exports.__esModule = true;
exports.obj = exports.default = void 0;

var _interopRequireWildcard2 = _interopRequireDefault(require("@babel/runtime/helpers/interopRequireWildcard"));

var _foo = _interopRequireWildcard3(require("foo"));

var namespaceImport = _interopRequireWildcard3(require("bar"));

const dynamicImport = Promise.resolve().then(() => (0, _interopRequireWildcard2.default)(require('baz')));

class Foo {
  constructor() {
    this.baz = (x, y) => x({ ...y
    });
  }

}

Foo.bar = 'abc';
const obj = {
  a: 1,
  b: 2
};
exports.obj = obj;
const spread = { ...obj,
  b: 2,
  c: 3
};
const {
  a,
  ...rest
} = spread;
const nullishCoalescing = obj ?? 1;
const optionalChaining = obj?.b;
var _default = obj;
exports.default = _default;
`;

exports[`transpiles ES2020+ syntax given {"targets":"last 2 Chrome versions"}: output (development) 1`] = `
import defaultImport, { namedImport } from 'foo';
import * as namespaceImport from 'bar';
const dynamicImport = import('baz');

class Foo {
  constructor() {
    this.baz = (x, y) => x({ ...y
    });
  }

}

Foo.bar = 'abc';
const obj = {
  a: 1,
  b: 2
};
const spread = { ...obj,
  b: 2,
  c: 3
};
const {
  a,
  ...rest
} = spread;
const nullishCoalescing = obj != null ? obj : 1;
const optionalChaining = obj == null ? void 0 : obj.b;
export default obj;
export { obj };
`;

exports[`transpiles ES2020+ syntax given {"targets":"last 2 Chrome versions"}: output (esm) 1`] = `
import defaultImport, { namedImport } from 'foo';
import * as namespaceImport from 'bar';
const dynamicImport = import('baz');

class Foo {
  constructor() {
    this.baz = (x, y) => x({ ...y
    });
  }

}

Foo.bar = 'abc';
const obj = {
  a: 1,
  b: 2
};
const spread = { ...obj,
  b: 2,
  c: 3
};
const {
  a,
  ...rest
} = spread;
const nullishCoalescing = obj ?? 1;
const optionalChaining = obj?.b;
export default obj;
export { obj };
`;

exports[`transpiles ES2020+ syntax given {"targets":"last 2 Chrome versions"}: output (production) 1`] = `
import defaultImport, { namedImport } from 'foo';
import * as namespaceImport from 'bar';
const dynamicImport = import('baz');

class Foo {
  constructor() {
    this.baz = (x, y) => x({ ...y
    });
  }

}

Foo.bar = 'abc';
const obj = {
  a: 1,
  b: 2
};
const spread = { ...obj,
  b: 2,
  c: 3
};
const {
  a,
  ...rest
} = spread;
const nullishCoalescing = obj != null ? obj : 1;
const optionalChaining = obj == null ? void 0 : obj.b;
export default obj;
export { obj };
`;

exports[`transpiles ES2020+ syntax given {}: input 1`] = `
import defaultImport, {namedImport} from 'foo'
import * as namespaceImport from 'bar'

const dynamicImport = import('baz')

class Foo {
  static bar = 'abc'
  baz = (x, y) => x({...y})
}

const obj = {a: 1, b: 2}

const spread = {...obj, b: 2, c: 3}
const {a, ...rest} = spread

const nullishCoalescing = obj ?? 1
const optionalChaining = obj?.b

export default obj
export {obj}

`;

exports[`transpiles ES2020+ syntax given {}: output (cjs) 1`] = `
"use strict";

var _interopRequireWildcard3 = require("@babel/runtime/helpers/interopRequireWildcard");

var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");

exports.__esModule = true;
exports.obj = exports.default = void 0;

var _interopRequireWildcard2 = _interopRequireDefault(require("@babel/runtime/helpers/interopRequireWildcard"));

var _foo = _interopRequireWildcard3(require("foo"));

var namespaceImport = _interopRequireWildcard3(require("bar"));

const dynamicImport = Promise.resolve().then(() => (0, _interopRequireWildcard2.default)(require('baz')));

class Foo {
  constructor() {
    this.baz = (x, y) => x({ ...y
    });
  }

}

Foo.bar = 'abc';
const obj = {
  a: 1,
  b: 2
};
exports.obj = obj;
const spread = { ...obj,
  b: 2,
  c: 3
};
const {
  a,
  ...rest
} = spread;
const nullishCoalescing = obj != null ? obj : 1;
const optionalChaining = obj == null ? void 0 : obj.b;
var _default = obj;
exports.default = _default;
`;

exports[`transpiles ES2020+ syntax given {}: output (development) 1`] = `
import _objectWithoutPropertiesLoose from "@babel/runtime/helpers/esm/objectWithoutPropertiesLoose";
import defaultImport, { namedImport } from 'foo';
import * as namespaceImport from 'bar';
var dynamicImport = import('baz');

var Foo = function Foo() {
  this.baz = function (x, y) {
    return x(Object.assign({}, y));
  };
};

Foo.bar = 'abc';
var obj = {
  a: 1,
  b: 2
};
var spread = Object.assign({}, obj, {
  b: 2,
  c: 3
});

var a = spread.a,
    rest = _objectWithoutPropertiesLoose(spread, ["a"]);

var nullishCoalescing = obj != null ? obj : 1;
var optionalChaining = obj == null ? void 0 : obj.b;
export default obj;
export { obj };
`;

exports[`transpiles ES2020+ syntax given {}: output (esm) 1`] = `
import defaultImport, { namedImport } from 'foo';
import * as namespaceImport from 'bar';
const dynamicImport = import('baz');

class Foo {
  constructor() {
    this.baz = (x, y) => x({ ...y
    });
  }

}

Foo.bar = 'abc';
const obj = {
  a: 1,
  b: 2
};
const spread = { ...obj,
  b: 2,
  c: 3
};
const {
  a,
  ...rest
} = spread;
const nullishCoalescing = obj != null ? obj : 1;
const optionalChaining = obj == null ? void 0 : obj.b;
export default obj;
export { obj };
`;

exports[`transpiles ES2020+ syntax given {}: output (production) 1`] = `
import _objectWithoutPropertiesLoose from "@babel/runtime/helpers/esm/objectWithoutPropertiesLoose";
import defaultImport, { namedImport } from 'foo';
import * as namespaceImport from 'bar';
var dynamicImport = import('baz');

var Foo = function Foo() {
  this.baz = function (x, y) {
    return x(Object.assign({}, y));
  };
};

Foo.bar = 'abc';
var obj = {
  a: 1,
  b: 2
};
var spread = Object.assign({}, obj, {
  b: 2,
  c: 3
});

var a = spread.a,
    rest = _objectWithoutPropertiesLoose(spread, ["a"]);

var nullishCoalescing = obj != null ? obj : 1;
var optionalChaining = obj == null ? void 0 : obj.b;
export default obj;
export { obj };
`;

exports[`transpiles ESM in node_modules given {}: input 1`] = `
export function map(value) {
  return value ?? 2
}

`;

exports[`transpiles ESM in node_modules given {}: output (cjs) 1`] = `"use strict";exports.__esModule=true;exports.map=map;function map(value){return value!=null?value:2;}`;

exports[`transpiles ESM in node_modules given {}: output (development) 1`] = `export function map(value){return value!=null?value:2;}`;

exports[`transpiles ESM in node_modules given {}: output (esm) 1`] = `export function map(value){return value!=null?value:2;}`;

exports[`transpiles ESM in node_modules given {}: output (production) 1`] = `export function map(value){return value!=null?value:2;}`;

exports[`transpiles Emotion given {"emotion":true}: input 1`] = `
import * as React from 'react'
import {css} from '@emotion/react'

const cssObj = css({color: 'red'})

export default function MyComponent(props) {
  const {a, b, ...rest} = props
  const [count, setCount] = React.useState(0)
  return (
    <>
      <button css={{color: 'blue'}} onClick={() => setCount((prevSize) => prevSize + 1)}>
        Increment
      </button>
      <div height={count} {...rest} css={cssObj} />
    </>
  )
}

`;

exports[`transpiles Emotion given {"emotion":true}: output (cjs) 1`] = `
"use strict";

var _interopRequireWildcard = require("@babel/runtime/helpers/interopRequireWildcard");

exports.__esModule = true;
exports.default = MyComponent;

var React = _interopRequireWildcard(require("react"));

var _react2 = require("@emotion/react");

const cssObj = {
  name: "hwfcu5",
  styles: "color:red"
};
var _ref = {
  name: "117wnve",
  styles: "color:blue"
};

function MyComponent(props) {
  const {
    a,
    b,
    ...rest
  } = props;
  const [count, setCount] = React.useState(0);
  return (0, _react2.jsx)(React.Fragment, null, (0, _react2.jsx)("button", {
    css: _ref,
    onClick: () => setCount(prevSize => prevSize + 1)
  }, "Increment"), (0, _react2.jsx)("div", {
    height: count,
    ...rest,
    css: cssObj
  }));
}
`;

exports[`transpiles Emotion given {"emotion":true}: output (development) 1`] = `
import _objectWithoutPropertiesLoose from "@babel/runtime/helpers/esm/objectWithoutPropertiesLoose";

var _jsxFileName = "/emotion.js",
    _s = $RefreshSig$();

function _EMOTION_STRINGIFIED_CSS_ERROR__() { return "You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."; }

import * as React from 'react';
import { css } from '@emotion/react';
import { jsx as ___EmotionJSX } from "@emotion/react";
var cssObj = process.env.NODE_ENV === "production" ? {
  name: "hwfcu5",
  styles: "color:red"
} : {
  name: "aslxie-cssObj",
  styles: "color:red;label:cssObj;",
  map: "/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbImVtb3Rpb24uanMiXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBR2UiLCJmaWxlIjoiZW1vdGlvbi5qcyIsInNvdXJjZXNDb250ZW50IjpbImltcG9ydCAqIGFzIFJlYWN0IGZyb20gJ3JlYWN0J1xuaW1wb3J0IHtjc3N9IGZyb20gJ0BlbW90aW9uL3JlYWN0J1xuXG5jb25zdCBjc3NPYmogPSBjc3Moe2NvbG9yOiAncmVkJ30pXG5cbmV4cG9ydCBkZWZhdWx0IGZ1bmN0aW9uIE15Q29tcG9uZW50KHByb3BzKSB7XG4gIGNvbnN0IHthLCBiLCAuLi5yZXN0fSA9IHByb3BzXG4gIGNvbnN0IFtjb3VudCwgc2V0Q291bnRdID0gUmVhY3QudXNlU3RhdGUoMClcbiAgcmV0dXJuIChcbiAgICA8PlxuICAgICAgPGJ1dHRvbiBjc3M9e3tjb2xvcjogJ2JsdWUnfX0gb25DbGljaz17KCkgPT4gc2V0Q291bnQoKHByZXZTaXplKSA9PiBwcmV2U2l6ZSArIDEpfT5cbiAgICAgICAgSW5jcmVtZW50XG4gICAgICA8L2J1dHRvbj5cbiAgICAgIDxkaXYgaGVpZ2h0PXtjb3VudH0gey4uLnJlc3R9IGNzcz17Y3NzT2JqfSAvPlxuICAgIDwvPlxuICApXG59XG4iXX0= */",
  toString: _EMOTION_STRINGIFIED_CSS_ERROR__
};

var _ref = process.env.NODE_ENV === "production" ? {
  name: "117wnve",
  styles: "color:blue"
} : {
  name: "fveiva-MyComponent",
  styles: "color:blue;label:MyComponent;",
  map: "/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbImVtb3Rpb24uanMiXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBVWMiLCJmaWxlIjoiZW1vdGlvbi5qcyIsInNvdXJjZXNDb250ZW50IjpbImltcG9ydCAqIGFzIFJlYWN0IGZyb20gJ3JlYWN0J1xuaW1wb3J0IHtjc3N9IGZyb20gJ0BlbW90aW9uL3JlYWN0J1xuXG5jb25zdCBjc3NPYmogPSBjc3Moe2NvbG9yOiAncmVkJ30pXG5cbmV4cG9ydCBkZWZhdWx0IGZ1bmN0aW9uIE15Q29tcG9uZW50KHByb3BzKSB7XG4gIGNvbnN0IHthLCBiLCAuLi5yZXN0fSA9IHByb3BzXG4gIGNvbnN0IFtjb3VudCwgc2V0Q291bnRdID0gUmVhY3QudXNlU3RhdGUoMClcbiAgcmV0dXJuIChcbiAgICA8PlxuICAgICAgPGJ1dHRvbiBjc3M9e3tjb2xvcjogJ2JsdWUnfX0gb25DbGljaz17KCkgPT4gc2V0Q291bnQoKHByZXZTaXplKSA9PiBwcmV2U2l6ZSArIDEpfT5cbiAgICAgICAgSW5jcmVtZW50XG4gICAgICA8L2J1dHRvbj5cbiAgICAgIDxkaXYgaGVpZ2h0PXtjb3VudH0gey4uLnJlc3R9IGNzcz17Y3NzT2JqfSAvPlxuICAgIDwvPlxuICApXG59XG4iXX0= */",
  toString: _EMOTION_STRINGIFIED_CSS_ERROR__
};

export default function MyComponent(props) {
  _s();

  var a = props.a,
      b = props.b,
      rest = _objectWithoutPropertiesLoose(props, ["a", "b"]);

  var _React$useState = React.useState(0),
      count = _React$useState[0],
      setCount = _React$useState[1];

  return ___EmotionJSX(React.Fragment, null, ___EmotionJSX("button", {
    css: _ref,
    onClick: function onClick() {
      return setCount(function (prevSize) {
        return prevSize + 1;
      });
    },
    __self: this,
    __source: {
      fileName: _jsxFileName,
      lineNumber: 11,
      columnNumber: 7
    }
  }, "Increment"), ___EmotionJSX("div", Object.assign({
    height: count
  }, rest, {
    css: cssObj,
    __self: this,
    __source: {
      fileName: _jsxFileName,
      lineNumber: 14,
      columnNumber: 7
    }
  })));
}

_s(MyComponent, "oDgYfYHkD9Wkv4hrAPCkI/ev3YU=");

_c = MyComponent;

var _c;

$RefreshReg$(_c, "MyComponent");
`;

exports[`transpiles Emotion given {"emotion":true}: output (esm) 1`] = `
import * as React from 'react';
import { css } from '@emotion/react';
import { jsx as ___EmotionJSX } from "@emotion/react";
const cssObj = {
  name: "hwfcu5",
  styles: "color:red"
};
var _ref = {
  name: "117wnve",
  styles: "color:blue"
};
export default function MyComponent(props) {
  const {
    a,
    b,
    ...rest
  } = props;
  const [count, setCount] = React.useState(0);
  return ___EmotionJSX(React.Fragment, null, ___EmotionJSX("button", {
    css: _ref,
    onClick: () => setCount(prevSize => prevSize + 1)
  }, "Increment"), ___EmotionJSX("div", {
    height: count,
    ...rest,
    css: cssObj
  }));
}
`;

exports[`transpiles Emotion given {"emotion":true}: output (production) 1`] = `
import _objectWithoutPropertiesLoose from "@babel/runtime/helpers/esm/objectWithoutPropertiesLoose";
import * as React from 'react';
import { css } from '@emotion/react';
import { jsx as ___EmotionJSX } from "@emotion/react";
var cssObj = {
  name: "hwfcu5",
  styles: "color:red"
};
var _ref = {
  name: "117wnve",
  styles: "color:blue"
};
export default function MyComponent(props) {
  var a = props.a,
      b = props.b,
      rest = _objectWithoutPropertiesLoose(props, ["a", "b"]);

  var _React$useState = React.useState(0),
      count = _React$useState[0],
      setCount = _React$useState[1];

  return ___EmotionJSX(React.Fragment, null, ___EmotionJSX("button", {
    css: _ref,
    onClick: function onClick() {
      return setCount(function (prevSize) {
        return prevSize + 1;
      });
    }
  }, "Increment"), ___EmotionJSX("div", Object.assign({
    height: count
  }, rest, {
    css: cssObj
  })));
}
`;

exports[`transpiles React given {}: input 1`] = `
import {useState} from 'react'

export default function MyComponent(props) {
  const {label, ...rest} = props
  const [count, setCount] = useState(0)
  return (
    <button onClick={() => setCount(count + 1)} {...rest}>
      {label} {count}
    </button>
  )
}

`;

exports[`transpiles React given {}: output (cjs) 1`] = `
"use strict";

exports.__esModule = true;
exports.default = MyComponent;

var _jsxRuntime = require("react/jsx-runtime");

var _react = require("react");

function MyComponent(props) {
  const {
    label,
    ...rest
  } = props;
  const [count, setCount] = (0, _react.useState)(0);
  return /*#__PURE__*/(0, _jsxRuntime.jsxs)("button", {
    onClick: () => setCount(count + 1),
    ...rest,
    children: [label, " ", count]
  });
}
`;

exports[`transpiles React given {}: output (development) 1`] = `
import _objectWithoutPropertiesLoose from "@babel/runtime/helpers/esm/objectWithoutPropertiesLoose";
import { jsxDEV as _jsxDEV } from "react/jsx-dev-runtime";

var _jsxFileName = "/react.js",
    _s = $RefreshSig$();

import { useState } from 'react';
export default function MyComponent(props) {
  _s();

  var label = props.label,
      rest = _objectWithoutPropertiesLoose(props, ["label"]);

  var _useState = useState(0),
      count = _useState[0],
      setCount = _useState[1];

  return /*#__PURE__*/_jsxDEV("button", Object.assign({
    onClick: function onClick() {
      return setCount(count + 1);
    }
  }, rest, {
    children: [label, " ", count]
  }), void 0, true, {
    fileName: _jsxFileName,
    lineNumber: 7,
    columnNumber: 5
  }, this);
}

_s(MyComponent, "oDgYfYHkD9Wkv4hrAPCkI/ev3YU=");

_c = MyComponent;

var _c;

$RefreshReg$(_c, "MyComponent");
`;

exports[`transpiles React given {}: output (esm) 1`] = `
import { jsxs as _jsxs } from "react/jsx-runtime";
import { useState } from 'react';
export default function MyComponent(props) {
  const {
    label,
    ...rest
  } = props;
  const [count, setCount] = useState(0);
  return /*#__PURE__*/_jsxs("button", {
    onClick: () => setCount(count + 1),
    ...rest,
    children: [label, " ", count]
  });
}
`;

exports[`transpiles React given {}: output (production) 1`] = `
import _objectWithoutPropertiesLoose from "@babel/runtime/helpers/esm/objectWithoutPropertiesLoose";
import { jsxs as _jsxs } from "react/jsx-runtime";
import { useState } from 'react';
export default function MyComponent(props) {
  var label = props.label,
      rest = _objectWithoutPropertiesLoose(props, ["label"]);

  var _useState = useState(0),
      count = _useState[0],
      setCount = _useState[1];

  return /*#__PURE__*/_jsxs("button", Object.assign({
    onClick: function onClick() {
      return setCount(count + 1);
    }
  }, rest, {
    children: [label, " ", count]
  }));
}
`;

exports[`transpiles TSX given {}: input 1`] = `
export default function add(a: number, b: number): number {
  return a + b
}

`;

exports[`transpiles TSX given {}: output (cjs) 1`] = `
"use strict";

exports.__esModule = true;
exports.default = add;

function add(a, b) {
  return a + b;
}
`;

exports[`transpiles TSX given {}: output (development) 1`] = `
export default function add(a, b) {
  return a + b;
}
`;

exports[`transpiles TSX given {}: output (esm) 1`] = `
export default function add(a, b) {
  return a + b;
}
`;

exports[`transpiles TSX given {}: output (production) 1`] = `
export default function add(a, b) {
  return a + b;
}
`;
